{
  "version": 4,
  "terraform_version": "1.5.3",
  "serial": 2392,
  "lineage": "b386f39c-358e-a6be-66df-cb14ca8ab926",
  "resources": [
    {
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "baskets",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "mallbots/baskets-ingress",
            "metadata": [
              {
                "annotations": null,
                "generate_name": "",
                "generation": 1,
                "labels": null,
                "name": "baskets-ingress",
                "namespace": "mallbots",
                "resource_version": "249617",
                "uid": "fb22a730-c6b7-4628-a39b-4d01d2a69d3f"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "nginx",
                "rule": [
                  {
                    "host": "",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "baskets",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 80
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/v1/api/baskets/",
                            "path_type": "Prefix"
                          },
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "baskets",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 80
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/baskets-spec/",
                            "path_type": "Prefix"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": []
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "kubernetes_namespace_v1.namespace",
            "kubernetes_service_v1.baskets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "cosec",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "mallbots/cosec-ingress",
            "metadata": [
              {
                "annotations": null,
                "generate_name": "",
                "generation": 1,
                "labels": null,
                "name": "cosec-ingress",
                "namespace": "mallbots",
                "resource_version": "249634",
                "uid": "4cf77306-fd8c-4ad5-bad9-297ff6b1ac4f"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "nginx",
                "rule": [
                  {
                    "host": "",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "cosec",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 80
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/v1/api/cosec/",
                            "path_type": "Prefix"
                          },
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "cosec",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 80
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/cosec-spec/",
                            "path_type": "Prefix"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": []
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "kubernetes_namespace_v1.namespace",
            "kubernetes_service_v1.cosec"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "depot",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "mallbots/depot-ingress",
            "metadata": [
              {
                "annotations": null,
                "generate_name": "",
                "generation": 1,
                "labels": null,
                "name": "depot-ingress",
                "namespace": "mallbots",
                "resource_version": "249615",
                "uid": "e2b14bb9-ba45-4e5d-9c84-44a4061527ec"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "nginx",
                "rule": [
                  {
                    "host": "",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "depot",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 80
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/v1/api/depot/",
                            "path_type": "Prefix"
                          },
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "depot",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 80
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/depot-spec/",
                            "path_type": "Prefix"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": []
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "kubernetes_namespace_v1.namespace",
            "kubernetes_service_v1.depot"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "ordering",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "mallbots/ordering-ingress",
            "metadata": [
              {
                "annotations": null,
                "generate_name": "",
                "generation": 1,
                "labels": null,
                "name": "ordering-ingress",
                "namespace": "mallbots",
                "resource_version": "249621",
                "uid": "7aaefc9d-297f-45d2-ab37-c0cd1f510d6a"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "nginx",
                "rule": [
                  {
                    "host": "",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "ordering",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 80
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/v1/api/ordering/",
                            "path_type": "Prefix"
                          },
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "ordering",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 80
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/ordering-spec/",
                            "path_type": "Prefix"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": []
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "kubernetes_namespace_v1.namespace",
            "kubernetes_service_v1.ordering"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "payments",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "mallbots/payments-ingress",
            "metadata": [
              {
                "annotations": null,
                "generate_name": "",
                "generation": 1,
                "labels": null,
                "name": "payments-ingress",
                "namespace": "mallbots",
                "resource_version": "249624",
                "uid": "34dd3e1a-1701-4c15-a344-3fc970c141f2"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "nginx",
                "rule": [
                  {
                    "host": "",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "payments",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 80
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/v1/api/payments/",
                            "path_type": "Prefix"
                          },
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "payments",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 80
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/payments-spec/",
                            "path_type": "Prefix"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": []
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "kubernetes_namespace_v1.namespace",
            "kubernetes_service_v1.payments"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "stores",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "mallbots/stores-ingress",
            "metadata": [
              {
                "annotations": null,
                "generate_name": "",
                "generation": 1,
                "labels": null,
                "name": "stores-ingress",
                "namespace": "mallbots",
                "resource_version": "249625",
                "uid": "74037418-7618-427f-980f-a902b13e414e"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "nginx",
                "rule": [
                  {
                    "host": "",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "stores",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 80
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/v1/api/stores/",
                            "path_type": "Prefix"
                          },
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "stores",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 80
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/stores-spec/",
                            "path_type": "Prefix"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": []
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "kubernetes_namespace_v1.namespace",
            "kubernetes_service_v1.stores"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "swagger",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "mallbots/swagger-ingress",
            "metadata": [
              {
                "annotations": {
                  "nginx.ingress.kubernetes.io/rewrite-target": "/"
                },
                "generate_name": "",
                "generation": 1,
                "labels": null,
                "name": "swagger-ingress",
                "namespace": "mallbots",
                "resource_version": "249626",
                "uid": "87b54c94-362c-46e1-b5b6-a884d54564b0"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "nginx",
                "rule": [
                  {
                    "host": "",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "users",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 80
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/",
                            "path_type": "Prefix"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": []
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "kubernetes_namespace_v1.namespace",
            "kubernetes_service_v1.users"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "users",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "mallbots/users-ingress",
            "metadata": [
              {
                "annotations": null,
                "generate_name": "",
                "generation": 1,
                "labels": null,
                "name": "users-ingress",
                "namespace": "mallbots",
                "resource_version": "249630",
                "uid": "1970c983-41c5-4a3e-9b36-e168b854d0ff"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "nginx",
                "rule": [
                  {
                    "host": "",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "users",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 80
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/v1/api/users/",
                            "path_type": "Prefix"
                          },
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "users",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 80
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/users-spec/",
                            "path_type": "Prefix"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": []
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "kubernetes_namespace_v1.namespace",
            "kubernetes_service_v1.users"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_namespace_v1",
      "name": "namespace",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "mallbots",
            "metadata": [
              {
                "generation": 0,
                "name": "mallbots",
                "resource_version": "249507",
                "uid": "b6c0ddc3-3245-4ffa-8351-c1af2c113572"
              }
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service_v1",
      "name": "baskets",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "mallbots/baskets",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "baskets"
                },
                "name": "baskets",
                "namespace": "mallbots",
                "resource_version": "249536",
                "uid": "34ca020a-7339-4470-a50e-067c0ac5b48e"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.110.207.130",
                "cluster_ips": [
                  "10.110.207.130"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "http",
                    "node_port": 0,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "80"
                  },
                  {
                    "name": "grpc",
                    "node_port": 0,
                    "port": 9000,
                    "protocol": "TCP",
                    "target_port": "9000"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app.kubernetes.io/name": "baskets"
                },
                "session_affinity": "ClientIP",
                "session_affinity_config": [
                  {
                    "client_ip": [
                      {
                        "timeout_seconds": 10800
                      }
                    ]
                  }
                ],
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "kubernetes_namespace_v1.namespace"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service_v1",
      "name": "collector",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "mallbots/collector",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "collector"
                },
                "name": "collector",
                "namespace": "mallbots",
                "resource_version": "249720",
                "uid": "f2432f2c-0b58-4ead-b4c9-bb14127fe7b5"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.104.17.245",
                "cluster_ips": [
                  "10.104.17.245"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "port-1",
                    "node_port": 0,
                    "port": 1888,
                    "protocol": "TCP",
                    "target_port": "1888"
                  },
                  {
                    "name": "port-2",
                    "node_port": 0,
                    "port": 8888,
                    "protocol": "TCP",
                    "target_port": "8888"
                  },
                  {
                    "name": "port-3",
                    "node_port": 0,
                    "port": 8889,
                    "protocol": "TCP",
                    "target_port": "8889"
                  },
                  {
                    "name": "port-4",
                    "node_port": 0,
                    "port": 13133,
                    "protocol": "TCP",
                    "target_port": "13133"
                  },
                  {
                    "name": "port-5",
                    "node_port": 0,
                    "port": 4317,
                    "protocol": "TCP",
                    "target_port": "4317"
                  },
                  {
                    "name": "port-6",
                    "node_port": 0,
                    "port": 4318,
                    "protocol": "TCP",
                    "target_port": "4318"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app.kubernetes.io/name": "collector"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "kubernetes_config_map_v1.collector",
            "kubernetes_deployment_v1.collector",
            "kubernetes_deployment_v1.jaeger",
            "kubernetes_namespace_v1.namespace",
            "kubernetes_service_v1.jaeger"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service_v1",
      "name": "cosec",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "mallbots/cosec",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "cosec"
                },
                "name": "cosec",
                "namespace": "mallbots",
                "resource_version": "249606",
                "uid": "ab351ffe-4c17-46fe-b125-55ade377a53f"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.111.10.95",
                "cluster_ips": [
                  "10.111.10.95"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "http",
                    "node_port": 0,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "80"
                  },
                  {
                    "name": "grpc",
                    "node_port": 0,
                    "port": 9000,
                    "protocol": "TCP",
                    "target_port": "9000"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app.kubernetes.io/name": "cosec"
                },
                "session_affinity": "ClientIP",
                "session_affinity_config": [
                  {
                    "client_ip": [
                      {
                        "timeout_seconds": 10800
                      }
                    ]
                  }
                ],
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "kubernetes_namespace_v1.namespace"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service_v1",
      "name": "depot",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "mallbots/depot",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "depot"
                },
                "name": "depot",
                "namespace": "mallbots",
                "resource_version": "249524",
                "uid": "76eadec2-f426-49fc-a4e3-bd6e34b10bc4"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.99.146.75",
                "cluster_ips": [
                  "10.99.146.75"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "http",
                    "node_port": 0,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "80"
                  },
                  {
                    "name": "grpc",
                    "node_port": 0,
                    "port": 9000,
                    "protocol": "TCP",
                    "target_port": "9000"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app.kubernetes.io/name": "depot"
                },
                "session_affinity": "ClientIP",
                "session_affinity_config": [
                  {
                    "client_ip": [
                      {
                        "timeout_seconds": 10800
                      }
                    ]
                  }
                ],
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "kubernetes_namespace_v1.namespace"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service_v1",
      "name": "jaeger",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "mallbots/jaeger",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "jaeger"
                },
                "name": "jaeger",
                "namespace": "mallbots",
                "resource_version": "249681",
                "uid": "9b8a9c6b-21bb-4796-a9cf-ab81a52835a8"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.107.42.248",
                "cluster_ips": [
                  "10.107.42.248"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "port-1",
                    "node_port": 30001,
                    "port": 16686,
                    "protocol": "TCP",
                    "target_port": "16686"
                  },
                  {
                    "name": "port-2",
                    "node_port": 30832,
                    "port": 14250,
                    "protocol": "TCP",
                    "target_port": "14250"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app.kubernetes.io/name": "jaeger"
                },
                "session_affinity": "None",
                "type": "NodePort"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "kubernetes_deployment_v1.jaeger",
            "kubernetes_namespace_v1.namespace"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service_v1",
      "name": "nats",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "mallbots/nats",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "nats"
                },
                "name": "nats",
                "namespace": "mallbots",
                "resource_version": "249676",
                "uid": "c3d40cf6-fded-4edd-9fe7-94e916578c49"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.100.190.211",
                "cluster_ips": [
                  "10.100.190.211"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 30003,
                    "port": 4222,
                    "protocol": "TCP",
                    "target_port": "4222"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app.kubernetes.io/name": "nats"
                },
                "session_affinity": "None",
                "type": "NodePort"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "kubernetes_deployment_v1.nats",
            "kubernetes_namespace_v1.namespace"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service_v1",
      "name": "ordering",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "mallbots/ordering",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "ordering"
                },
                "name": "ordering",
                "namespace": "mallbots",
                "resource_version": "249546",
                "uid": "620af5e0-ebe7-467e-ba6a-4cfe9bfd64fe"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.98.12.221",
                "cluster_ips": [
                  "10.98.12.221"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "http",
                    "node_port": 0,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "80"
                  },
                  {
                    "name": "grpc",
                    "node_port": 0,
                    "port": 9000,
                    "protocol": "TCP",
                    "target_port": "9000"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app.kubernetes.io/name": "ordering"
                },
                "session_affinity": "ClientIP",
                "session_affinity_config": [
                  {
                    "client_ip": [
                      {
                        "timeout_seconds": 10800
                      }
                    ]
                  }
                ],
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "kubernetes_namespace_v1.namespace"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service_v1",
      "name": "payments",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "mallbots/payments",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "payments"
                },
                "name": "payments",
                "namespace": "mallbots",
                "resource_version": "249554",
                "uid": "c9523cb9-9191-4775-a07b-788c7d0601c9"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.96.183.11",
                "cluster_ips": [
                  "10.96.183.11"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "http",
                    "node_port": 0,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "80"
                  },
                  {
                    "name": "grpc",
                    "node_port": 0,
                    "port": 9000,
                    "protocol": "TCP",
                    "target_port": "9000"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app.kubernetes.io/name": "payments"
                },
                "session_affinity": "ClientIP",
                "session_affinity_config": [
                  {
                    "client_ip": [
                      {
                        "timeout_seconds": 10800
                      }
                    ]
                  }
                ],
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "kubernetes_namespace_v1.namespace"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service_v1",
      "name": "postgres",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "mallbots/postgres",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "postgres"
                },
                "name": "postgres",
                "namespace": "mallbots",
                "resource_version": "249686",
                "uid": "f9d5e95c-ce0b-4257-9771-2b61ccac641b"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.106.190.11",
                "cluster_ips": [
                  "10.106.190.11"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 30000,
                    "port": 5432,
                    "protocol": "TCP",
                    "target_port": "5432"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app.kubernetes.io/name": "postgres"
                },
                "session_affinity": "None",
                "type": "NodePort"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "kubernetes_namespace_v1.namespace",
            "kubernetes_stateful_set_v1.postgres"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service_v1",
      "name": "prometheus",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "mallbots/prometheus",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "prometheus"
                },
                "name": "prometheus",
                "namespace": "mallbots",
                "resource_version": "249708",
                "uid": "215b6f71-6b91-428c-8524-3796ec92f7dd"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.98.2.61",
                "cluster_ips": [
                  "10.98.2.61"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 30002,
                    "port": 9090,
                    "protocol": "TCP",
                    "target_port": "9090"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app.kubernetes.io/name": "prometheus"
                },
                "session_affinity": "None",
                "type": "NodePort"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "kubernetes_config_map_v1.prometheus",
            "kubernetes_deployment_v1.prometheus",
            "kubernetes_namespace_v1.namespace"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service_v1",
      "name": "stores",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "mallbots/stores",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "stores"
                },
                "name": "stores",
                "namespace": "mallbots",
                "resource_version": "249582",
                "uid": "fe4136f6-a707-4b4c-8729-17bee7a96adc"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.97.57.57",
                "cluster_ips": [
                  "10.97.57.57"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "http",
                    "node_port": 0,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "80"
                  },
                  {
                    "name": "grpc",
                    "node_port": 0,
                    "port": 9000,
                    "protocol": "TCP",
                    "target_port": "9000"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app.kubernetes.io/name": "stores"
                },
                "session_affinity": "ClientIP",
                "session_affinity_config": [
                  {
                    "client_ip": [
                      {
                        "timeout_seconds": 10800
                      }
                    ]
                  }
                ],
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "kubernetes_namespace_v1.namespace"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service_v1",
      "name": "users",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "mallbots/users",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "users"
                },
                "name": "users",
                "namespace": "mallbots",
                "resource_version": "249567",
                "uid": "fd679cc1-2c09-48a8-bc9b-af2c819b3209"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.102.105.65",
                "cluster_ips": [
                  "10.102.105.65"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "http",
                    "node_port": 0,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "80"
                  },
                  {
                    "name": "grpc",
                    "node_port": 0,
                    "port": 9000,
                    "protocol": "TCP",
                    "target_port": "9000"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app.kubernetes.io/name": "users"
                },
                "session_affinity": "ClientIP",
                "session_affinity_config": [
                  {
                    "client_ip": [
                      {
                        "timeout_seconds": 10800
                      }
                    ]
                  }
                ],
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "kubernetes_namespace_v1.namespace"
          ]
        }
      ]
    }
  ]
}